--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@openzeppelin/contracts": "^4.5.0",
     "@openzeppelin/contracts-upgradeable": "^4.5.1",
     "@openzeppelin/hardhat-upgrades": "^1.14.0",
-    "hardhat-contract-sizer": "^2.4.0"
+    "hardhat-contract-sizer": "^2.4.0",
+    "moralis": "^1.3.2"
   }
 }
