--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ethersproject/providers": "^5.5.0",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@typechain/ethers-v5": "^8.0.5",
     "@typechain/hardhat": "^3.0.0",
     "@types/chai": "^4.2.22",
@@ -53,7 +54,8 @@
     "ts-generator": "^0.1.1",
     "ts-node": "^10.4.0",
     "typechain": "^6.0.5",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "web3": "^1.7.3"
   },
   "files": [
     "/contracts"
