--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
   },
   "dependencies": {
     "@chainlink/contracts": "^0.6.0",
+    "@chainlink/contracts-ccip": "^1.2.1",
     "@harmony-js/utils": "^0.1.56",
     "@nomicfoundation/hardhat-verify": "^1.0.0",
     "@nomiclabs/hardhat-etherscan": "^3.0.1",
